# jrnl

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
frontend/: .prettierrc  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: Editor.svelte  History.svelte  Login.svelte  Title.svelte  api.ts  index.ts  stores.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/history/: +page.js  +page.svelte
frontend/src/routes/history/[documentID]/: +page.js  +page.svelte
frontend/static/font/: EBGaramond.css
src/: frontend.rs  main.rs  storage.rs
src/api/: mod.rs
src/auth/: mod.rs  oauth.rs  oidc.rs
