[package]
name = "jrnl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
base64 = "0.21.5"
openidconnect = "3.4.0"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
time = "0.3.30"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"
